@@ -5,7 +5,7 @@ this package requires python-3.0 or later.
 
 All files are released under the Python PSF License
 (see http://www.python.org/psf/license)
-and are Copyright 2006-2008 RW Penney.
+and are Copyright 2006-2009 RW Penney.
 
 The package comes with NO WARRANTY, and NO CLAIMS OF FITNESS FOR ANY PURPOSE.
 However, the author welcomes *constructive* feedback
