@@ -1,5 +1,4 @@
 Implement lshift/rshift
 Improve treatment of rounding-errors on truncated Taylor-series
-Improve estimate of augmented resolution needed in cached pi, e etc
 
 ## $Revision$, $Date$
